--- a/tw_sub/templates/submit.html
+++ b/tw_sub/templates/submit.html
@@ -1,23 +1,7 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://unpkg.com/jquery@3.3.1/dist/jquery.min.js" ></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </head>
-<body>
-    <nav class="navbar navbar-light bg-light" style="background-color: #bdf !important;">
-        <a class="navbar-brand" href="#">Twitter Export</a>   
-        <div class="nav-item active">
-        <a class="nav-link" href="/">Home </a>
-        </div>
-        <div class="nav-item">
-        <a class="nav-link" target="_blank" href="https://github.com/MohitKumar1991/twitter-export">Github</a>
-        </div>
-        <span class="navbar-text">
-            A tool to DM your twitter followers
-        </span>
-    </nav>
+{% extends 'base.html' %}
+
+{% block title %}Subscribe to {{username}}{% endblock %}</h1>
+{% block content %}
     <div class="container">
         <h2 style="margin:20px;"></h2>
         <div id="submitemail-group">
@@ -75,5 +59,4 @@
             });
         }
      </script>
-</body>
-</html>
+{% endblock %}
