Some minor fixes

--- a/tw_sub/templates/base.html
+++ b/tw_sub/templates/base.html
@@ -71,7 +71,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="/">Twitter Export</a> 
-            <span class="navbar-text w-50 text-center d-sm-none d-md-block">
+            <span class="navbar-text w-50 text-center d-none d-md-block">
                 A tool to move your twitter followers to private list
             </span>
             <div class="collapse navbar-collapse navbar-expand-lg flex-grow-1 justify-content-end" id="navbarToggle">
